# CodeNote

./: README.en.md
Code Language/Tool/Clion/: Clion.md
Code Language/the-c/Basic/: the-c-note.md
Code Language/the-cpp/basic/: Unit 10. string 类和标准模版库.md  Unit 11.输入输出.md  Unit 3. 类的函数 —— 成员函数.md  Unit 7. 友元.md  Unit 8. 异常.md  Unit 9. RTTI和类型转换运算符.md
Code Language/the-cpp/class_diagram/: IO class.drawio
Code Language/the-cpp/source/: CMakeLists.txt  KeyMap.md
Code Language/the-cpp/source/Unit1/Link/: link1.cpp  link2.cpp
Code Language/the-cpp/source/Unit1/Struct/: struct2.c
Code Language/the-cpp/source/Unit10/: main.cpp  smart_ptr.h  tobuy.txt
Code Language/the-cpp/source/Unit11/: FileCount.h  FileMode.h  FileRandomIO.h  RandomReadAndWriteFile.txt  ReadFile.txt  WriteAppFile.txt  WriteFile.txt  WriteFileBinary.txt  main.cpp
Code Language/the-cpp/source/Unit12/: initializer_list_test.h  move_semantics.h
Code Language/the-cpp/source/Unit2/: README.md
Code Language/the-cpp/source/Unit2/Class Flexible Demo/: Readme.md
Code Language/the-cpp/source/Unit2/Stock/: Readme.md  demo1.cpp  demo3.cpp  stock1.h
Code Language/the-cpp/source/Unit3/: README.md
Code Language/the-cpp/source/Unit3/Operator/: myfriend.h  mytime2.cpp
Code Language/the-cpp/source/Unit3/TypeConversion/: demo.cpp  stone.h
Code Language/the-cpp/source/Unit4/: String.h  StringBad.cpp  StringBad.h
Code Language/the-cpp/source/Unit5/: Brass.h  person.cpp
Code Language/the-cpp/source/Unit6/: PrivateExtend.h  README.md
Code Language/the-cpp/source/Unit7/: main.cpp
Code Language/the-cpp/source/Unit8/Theory/: main.cpp
Code Language/the-cpp/source/Unit9/: README.md  main.cpp
Coding/Tool/Clion/: Clion.md  KeyMap.md
Coding/the-c/basic_note/: the-c-note.md
Coding/the-cpp/basic_note/: Unit 1. 基本语法.md  Unit 10. string 类和标准模版库.md  Unit 11.输入输出.md  Unit 12.C++11新特性.md  Unit 2. 类和对象.md  Unit 3. 类的函数 —— 成员函数.md  Unit 4. 类和动态内存分配.md  Unit 5. 类的继承.md  Unit 6. 代码重用.md  Unit 7. 友元.md  Unit 8. 异常.md  (+1 more)
basic/: Unit 1. 基本语法.md  Unit 10.  string 类和标准模版库.md  Unit 2. 类和对象.md  Unit 3. 类的函数 —— 成员函数.md  Unit 4. 类和动态内存分配.md  Unit 5. 类的继承.md  Unit 6. 代码重用.md  Unit 8. 异常.md
source/: CMakeLists.txt  KeyMap.md
source/Unit1/: README.md
source/Unit10/: README.md  main.cpp  smart_ptr.h  vector.h
source/Unit4/: String.cpp  client.cpp  client.h  position_new.cpp
source/Unit5/: Brass.cpp  main.cpp  person.h
source/Unit6/: ClassTemplate.h  Contains.h  MultipleInheritance.h  main.cpp
source/Unit7/: Friend.cpp  Friend.h
source/Unit8/: Exception.cpp  Exception.h  README.md  main.cpp
搭建教程/: 图床.md
生活/: 提升自己.md
(+53 files in other folders)
